<resources>
    <string name="app_name">CATS</string>

    <!-- Menu Options-->
    <string name="action_settings">Settings</string>
    <string name="cat_of_the_day">Cat Of The Day</string>
    <string name="about">About</string>

    <!-- Radio Button Options-->
    <string name="no_photo">Contacts without a photo</string>
    <string name="all_contacts">All contacts</string>
    <string name="select_contacts">Select the contacts to get a new photo</string>

    <!-- Button Text-->
    <string name="work_it">Let\'s do this!</string>
    <string name="cancel_selection">Cancel</string>
    <string name="continue_selection">Awesome!</string>
    <string name="view_on_site">View on PetFinder.com</string>

    <!-- Descriptions-->
    <string name="current_contact_photo">The current photo set for the contact</string>
    <string name="cat_of_the_day_photo">The cat of the day</string>

    <!-- Banner-->
    <string name="banner_ad_unit_id">/6499/example/banner</string>

    <!-- Loading Text-->
    <string name="loading">Purring and kneading. Give me a second&#8230;</string>

    <!-- About Text-->
    <string name="about_text">\t\t This app may be a little silly, as was intended, but it was written to bring to light our love of cats. My wife and I have four cats (and a dog), and love them very much. I hope this app brings a smile to your face, and encourages you to adopt a cat of your own or donate to a local animal shelter or those foster adoptable animals.\n\n
        \tThank you,\n\n
        \tCasey
    </string>
</resources>
