<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/which_contacts"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/no_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_photo" />
        <RadioButton android:id="@+id/all_contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_contacts" />
        <RadioButton android:id="@+id/select_contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_contacts" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/work_it"
        android:id="@+id/polyButton"
        android:layout_marginBottom="26dp" />

</LinearLayout>